修改部分组件

--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -34,17 +34,6 @@
       display: none;
     }
   }
-  &.is-white {
-    .el-checkbox__input {
-      .el-checkbox__inner {
-        border: 5px solid #fff;
-        box-shadow: 0 0 8px transparentize(#ffffff, 0.3);
-      }
-    }
-    .el-checkbox__label {
-      color: #fff;
-    }
-  }
   &.is-checked {
     .el-checkbox__input {
       .el-checkbox__inner {
@@ -76,6 +65,28 @@
       }
       .el-checkbox__label {
         color: $checkbox-disabled-color;
+      }
+    }
+  }
+  &.is-white {
+    .el-checkbox__input {
+      .el-checkbox__inner {
+        border: 1px solid #fff;
+        box-shadow: none;
+      }
+    }
+    .el-checkbox__label {
+      color: #fff;
+    }
+    &.is-checked {
+      .el-checkbox__input {
+        .el-checkbox__inner {
+          border: 5px solid #fff;
+          box-shadow: none;
+        }
+      }
+      .el-checkbox__label {
+        color: #fff;
       }
     }
   }
