--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -3,96 +3,149 @@
 
 .xin-input {
   display: inline-block;
-  margin-right: $input-margin-right;
-  font-size: $input-font-size;
   width: $input-width;
-  line-height: $input-line-height;
   height: $input-line-height;
   vertical-align: middle;
-  color: $input-font-color;
-  outline: none;
-  border: 1px solid $input-border-color;
-  box-sizing: border-box;
-  padding: 0 $input-padding-right;
-  transition: all 0.3s;
-  background: transparentize($input-border-color, 0.9);
-  &:hover {
-    border: 1px solid $input-border-active-color;
+  position: relative;
+  & + & {
+    margin-left: $input-margin-right;
   }
-  &::placeholder {
-    color: $input-disabled-color + #222222;
-  }
-  &:disabled {
-    color: $input-disabled-color;
-    background: transparentize($input-border-color, 0.7);
-  }
-  &:focus {
-    border: 1px solid $input-border-active-color;
-    box-shadow: 0 0 8px transparentize($input-border-active-color, 0.6);
-    background: transparentize($input-border-active-color, 0.9);
-  }
-  &.xin-input-round {
-    border-radius: $input-line-height / 2;
-  }
-  &.xin-input-error {
-    border: 1px solid $input-border-error-color;
-    background: transparentize($input-border-error-color, 0.95);
-    &:focus {
-      box-shadow: 0 0 8px transparentize($input-border-error-color, 0.6);
-      background: transparentize($input-border-error-color, 0.9);
+  .xin-input-icon {
+    width: $input-line-height;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    color: $input-border-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &.icon-left {
+      left: 0;
+    }
+    &.icon-right {
+      right: 0;
+      .icon:hover {
+        color: $input-border-color - #333333;
+      }
+    }
+    .icon {
+      width: 16px;
+      height: 16px;
+      display: block;
     }
   }
-  &.xin-input-success {
-    border: 1px solid $input-border-success-color;
-    background: transparentize($input-border-success-color, 0.95);
+  &.visible {
+    &:hover {
+      .xin-input-inner {
+        border: 1px solid $input-border-active-color;
+      }
+    }
+    .xin-input-error {
+      border: 1px solid $input-border-error-color;
+      background: transparentize($input-border-error-color, 0.95);
+      &:focus {
+        box-shadow: 0 0 8px transparentize($input-border-error-color, 0.6);
+        background: transparentize($input-border-error-color, 0.9);
+      }
+      &:hover {
+        border: 1px solid $input-border-error-color;
+      }
+    }
+    .xin-input-success {
+      border: 1px solid $input-border-success-color;
+      background: transparentize($input-border-success-color, 0.95);
+      &:focus {
+        box-shadow: 0 0 8px transparentize($input-border-success-color, 0.6);
+        background: transparentize($input-border-success-color, 0.9);
+      }
+      &:hover {
+        border: 1px solid $input-border-success-color;
+      }
+    }
+  }
+  .xin-input-inner {
+    width: 100%;
+    height: 100%;
+    font-size: $input-font-size;
+    line-height: $input-line-height;
+    color: $input-font-color;
+    outline: none;
+    border: 1px solid $input-border-color;
+    box-sizing: border-box;
+    padding: 0 $input-padding-right;
+    transition: all 0.3s;
+    background: transparentize($input-border-color, 0.85);
+    &::placeholder {
+      color: $input-disabled-color + #222222;
+    }
+    &:disabled {
+      color: $input-disabled-color;
+      background: transparentize($input-border-color, 0.6);
+    }
     &:focus {
-      box-shadow: 0 0 8px transparentize($input-border-success-color, 0.6);
-      background: transparentize($input-border-success-color, 0.9);
+      border: 1px solid $input-border-active-color;
+      box-shadow: 0 0 8px transparentize($input-border-active-color, 0.6);
+      background: transparentize($input-border-active-color, 0.9);
+    }
+    &.has-left-icon {
+      padding-left: $input-line-height;
+    }
+    &.has-right-icon {
+      padding-right: $input-line-height;
+    }
+    &.xin-input-round {
+      border-radius: $input-line-height / 2;
     }
   }
 }
 
 .xin-textarea {
   display: inline-block;
-  margin-right: $input-margin-right;
-  font-size: $input-font-size;
-  width: $textarea-width;
-  line-height: $textarea-line-height;
-  height: $textarea-height;
-  vertical-align: top;
-  color: $input-font-color;
-  outline: none;
-  border: 1px solid $input-border-color;
-  box-sizing: border-box;
-  padding: 5px $input-padding-right;
-  transition: all 0.3s;
-  background: transparentize($input-border-color, 0.9);
-  resize: none;
-  overflow-y: auto;
-  &::placeholder {
-    color: $input-disabled-color + #222222;
+  & + & {
+    margin-left: $input-margin-right;
   }
-  &:disabled {
-    color: $input-disabled-color;
-    background: transparentize($input-border-color, 0.7);
-  }
-  &:focus {
-    border: 1px solid $input-border-active-color;
-    box-shadow: 0 0 8px transparentize($input-border-active-color, 0.6);
-  }
-  &.xin-textarea-round {
-    border-radius: $input-line-height / 2;
-  }
-  &.xin-textarea-error {
-    border: 1px solid $input-border-error-color;
-    &:focus {
-      box-shadow: 0 0 8px transparentize($input-border-error-color, 0.6);
+  .xin-textarea-inner {
+    margin-right: $input-margin-right;
+    font-size: $input-font-size;
+    width: $textarea-width;
+    line-height: $textarea-line-height;
+    height: $textarea-height;
+    vertical-align: top;
+    color: $input-font-color;
+    outline: none;
+    border: 1px solid $input-border-color;
+    box-sizing: border-box;
+    padding: 5px $input-padding-right;
+    transition: all 0.3s;
+    background: transparentize($input-border-color, 0.9);
+    resize: none;
+    overflow-y: auto;
+    &::placeholder {
+      color: $input-disabled-color + #222222;
     }
-  }
-  &.xin-textarea-success {
-    border: 1px solid $input-border-success-color;
+    &:disabled {
+      color: $input-disabled-color;
+      background: transparentize($input-border-color, 0.7);
+    }
     &:focus {
-      box-shadow: 0 0 8px transparentize($input-border-success-color, 0.6);
+      border: 1px solid $input-border-active-color;
+      box-shadow: 0 0 8px transparentize($input-border-active-color, 0.6);
+    }
+    &.xin-textarea-round {
+      border-radius: $input-line-height / 2;
+    }
+    &.xin-textarea-error {
+      border: 1px solid $input-border-error-color;
+      &:focus {
+        box-shadow: 0 0 8px transparentize($input-border-error-color, 0.6);
+      }
+    }
+    &.xin-textarea-success {
+      border: 1px solid $input-border-success-color;
+      &:focus {
+        box-shadow: 0 0 8px transparentize($input-border-success-color, 0.6);
+      }
     }
   }
 }
+
