--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -22,6 +22,15 @@
     // background: rgba(0, 0, 0, 0.5);
     z-index: 1000;
   }
+  .xin-select-tags {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    // background: red;
+  }
   .xin-select-options {
     position: absolute;
     top: 30px;
