--- a/src/styles/components/label.scss
+++ b/src/styles/components/label.scss
@@ -3,7 +3,7 @@
 
 .xin-label {
   display: inline-block;
-  margin-right: $label-margin-right;
+  margin-right: $label-space-width;
   text-align: left;
   font-size: $label-font-size;
   width: auto;
