--- a/src/styles/components/radio.scss
+++ b/src/styles/components/radio.scss
@@ -3,7 +3,7 @@
 
 .xin-radio {
   display: inline-block;
-  margin-right: $radio-margin-right;
+  margin-right: $radio-space-width;
   cursor: pointer;
   transition: all 0.3s;
   .xin-radio-icon {
