--- a/src/styles/components/steps.scss
+++ b/src/styles/components/steps.scss
@@ -1,7 +1,7 @@
 
 @import "~@/styles/const.scss";
 .xin-steps {
-  margin-right: $rate-margin-right;
+  margin-right: $rate-space-width;
   vertical-align: top;
   .xin-steps-box {
     display: flex;
