--- a/src/styles/components/switch.scss
+++ b/src/styles/components/switch.scss
@@ -1,7 +1,7 @@
 
 @import "~@/styles/const.scss";
 .xin-switch {
-  margin-right: $switch-margin-right;
+  margin-right: $switch-space-width;
   display: inline-block;
   min-width: $switch-min-width;
   height: $switch-line-height;
