--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -7,5 +7,5 @@
 .xin-popover-content-text-box
 .xin-popover-content-text {
   white-space: nowrap;
-  padding: 0 $tooltip-margin-right;
+  padding: 0 $tooltip-space-width;
 }
