--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -1,7 +1,7 @@
 
 @import "~@/styles/const.scss";
 .xin-checkbox {
-  margin-right: $radio-margin-right;
+  margin-right: $radio-space-width;
   cursor: pointer;
   .el-checkbox__input {
     .el-checkbox__inner {
