--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -7,37 +7,68 @@
   background: transparentize($color, 0.95);
   &.fill {
     color: #fff;
-    background: transparentize($color, 0);
-    border: 1px solid transparentize($color, 0);
-  }
-  &.inline {
-    color: transparentize($color, 0);
-    background: transparentize($color, 1);
-    border: 1px solid transparentize($color, 1);
+    background: $color;
+    border: 1px solid $color;
     &:hover {
-      color: transparentize($color, 0.2);
-      border: 1px solid transparentize($color, 1);
-      background: transparentize($color, 1);
-      box-shadow: 0 0 8px transparentize($color, 1);
+      color: transparentize(#fff, 0.2);
+      background: transparentize($color, 0.2);
+      box-shadow: 0 0 8px transparentize($color, 0.6);
     }
     &:active {
-      color: transparentize($color - #111111, 0);
-      border: 1px solid transparentize($color, 1);
-      background: transparentize($color, 1);
-      box-shadow: 0 0 8px transparentize($color, 1);
+      color: #fff;
+      background: $color;
+      box-shadow: 0 0 8px transparentize($color, 0.3);
+    }
+    &.disabled {
+      color: transparentize(#ffffff, 0.2);
+      background: transparentize($color, 0.6);
+      box-shadow: none;
+    }
+  }
+  &.inline {
+    color: $color;
+    background: transparent;
+    border: 1px solid transparent;
+    &:hover {
+      border: 1px solid transparent;
+      background: transparent;
+      box-shadow: 0 0 8px transparent;
+    }
+    &:active {
+      border: 1px solid transparent;
+      background: transparent;
+      box-shadow: 0 0 8px transparent;
+    }
+    &.disabled {
+      font-weight: normal;
+      color: transparentize($color, 0.6);
+      border: none;
+      background: transparent;
+      box-shadow: none;
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
   &:hover {
-    color: #fff;
-    border: 1px solid transparentize($color - #111111, 0.2);
-    background: transparentize($color - #111111, 0.2);
-    box-shadow: 0 0 8px transparentize($color, 0.6);
+    border: 1px solid transparentize($color, 0.2);
+    background: transparentize($color, 0.9);
+    color: transparentize($color, 0);
+    box-shadow: 0 0 8px transparentize($color, 0.8);
   }
   &:active {
-    color: #fff;
-    border: 1px solid transparentize($color, 0);
-    background: transparentize($color, 0);
-    box-shadow: 0 0 8px transparentize($color, 0.4);
+    border: 1px solid $color;
+    background: transparentize($color, 0.8);
+    color: $color;
+    box-shadow: 0 0 8px transparentize($color, 0.6);
+  }
+  &.disabled {
+    border: 1px solid transparentize($color, 0.7);
+    background: transparentize($color, 0.98);
+    color: transparentize($color, 0.6);
+    &:hover {
+      box-shadow: none;
+    }
   }
 }
 
@@ -50,11 +81,7 @@
   box-sizing: border-box;
   cursor: pointer;
   outline: none;
-  transition: all 0.3s;
   vertical-align: middle;
-  color: transparentize($button-default-color - #111111, 0);
-  border: 1px solid transparentize($button-default-color, 0);
-  background: transparentize($button-default-color, 0.95);
   & + & {
     margin-left: $button-space-width;
   }
@@ -64,54 +91,28 @@
   &.round {
     border-radius: $button-line-height / 2;
   }
-  &.fill {
-    color: #fff;
-    background: transparentize($button-default-color, 0);
-    border: 1px solid transparentize($button-default-color, 0);
-  }
   &.inline {
     padding: 0 5px;
+    &:hover {
+      text-decoration: underline;
+    }
     & + & {
       margin-left: $button-space-width - 10px;
     }
-    color: transparentize($button-default-color, 0);
-    background: transparentize($button-default-color, 1);
-    border: 1px solid transparentize($button-default-color, 1);
-    &:hover {
-      color: transparentize($button-default-color, 0.2);
-      border: 1px solid transparentize($button-default-color, 1);
-      background: transparentize($button-default-color, 1);
-      box-shadow: 0 0 8px transparentize($button-default-color, 1);
-    }
-    &:active {
-      color: transparentize($button-default-color - #111111, 0);
-      border: 1px solid transparentize($button-default-color, 1);
-      background: transparentize($button-default-color, 1);
-      box-shadow: 0 0 8px transparentize($button-default-color, 1);
-    }
   }
-  &:hover {
-    color: #fff;
-    border: 1px solid transparentize($button-default-color, 0.2);
-    background: transparentize($button-default-color, 0.2);
-    box-shadow: 0 0 8px transparentize($button-default-color, 0.6);
-  }
-  &:active {
-    color: #fff;
-    border: 1px solid transparentize($button-default-color - #111111, 0);
-    background: transparentize($button-default-color - #111111, 0);
-    box-shadow: 0 0 8px transparentize($button-default-color, 0.4);
+  &.default {
+    @include button-style ($button-default-color);
   }
   &.info {
-    @include button-style($button-info-color);
+    @include button-style ($button-info-color);
   }
   &.success {
-    @include button-style($button-success-color);
+    @include button-style ($button-success-color);
   }
   &.error {
-    @include button-style($button-error-color);
+    @include button-style ($button-error-color);
   }
   &.warning {
-    @include button-style($button-warning-color);
+    @include button-style ($button-warning-color);
   }
 }
