--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -4,13 +4,13 @@
   width: 100%;
   .xin-table-content {
     width: 100%;
-    border-top: 1px solid $table-active-color;
+    border-top: 1px solid $table-info-color;
     .xin-table-thead {
       .xin-table-tr {
         .xin-table-th {
           font-size: $table-font-size;
           line-height: $table-line-height;
-          background: $table-active-color;
+          background: $table-info-color;
           color: #fff;
           padding: 5px 0;
         }
@@ -25,7 +25,7 @@
           padding: 5px;
         }
         &.stripe {
-          background: transparentize($table-active-color, 0.95);
+          background: transparentize($table-info-color, 0.95);
         }
       }
     }
@@ -33,8 +33,8 @@
   .xin-table-null {
     padding: 30px 45%;
     text-align: center;
-    background: transparentize($table-active-color, 0.9);
-    color: transparentize($table-active-color, 0.5);
+    background: transparentize($table-info-color, 0.9);
+    color: transparentize($table-info-color, 0.5);
     .xin-table-null-iconfont {
       font-size: 30px;
       display: block;
